@@ -16,6 +16,7 @@
 
 package io.fabric8.openshift.client.server.mock;
 
+import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -26,6 +27,11 @@ import io.fabric8.kubernetes.api.builder.TypedVisitor;
 import io.fabric8.kubernetes.api.model.APIGroupListBuilder;
 import io.fabric8.kubernetes.api.model.ContainerFluent;
 import io.fabric8.kubernetes.api.model.DeletionPropagation;
+import io.fabric8.kubernetes.api.model.PodBuilder;
+import io.fabric8.kubernetes.api.model.PodListBuilder;
+import io.fabric8.kubernetes.api.model.WatchEvent;
+import io.fabric8.kubernetes.client.dsl.LogWatch;
+import io.fabric8.kubernetes.client.utils.Utils;
 import io.fabric8.openshift.api.model.DeploymentConfigSpecFluent;
 import okhttp3.mockwebserver.RecordedRequest;
 import org.junit.Rule;
@@ -38,15 +44,18 @@ import io.fabric8.openshift.api.model.DeploymentConfigList;
 import io.fabric8.openshift.api.model.DeploymentConfigListBuilder;
 import io.fabric8.openshift.client.OpenShiftClient;
 
+import java.io.ByteArrayOutputStream;
+import java.net.HttpURLConnection;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 @EnableRuleMigrationSupport
-public class DeploymentConfigTest {
+class DeploymentConfigTest {
   @Rule
   public OpenShiftServer server = new OpenShiftServer();
 
   @Test
-  public void testList() {
+  void testList() {
    server.expect().withPath("/apis/apps.openshift.io/v1/namespaces/test/deploymentconfigs").andReturn(200, new DeploymentConfigListBuilder().build()).once();
    server.expect().withPath("/apis").andReturn(200, new APIGroupListBuilder()
       .addNewGroup()
@@ -84,7 +93,7 @@ public class DeploymentConfigTest {
   }
 
   @Test
-  public void testGet() {
+  void testGet() {
    server.expect().withPath("/apis/apps.openshift.io/v1/namespaces/test/deploymentconfigs/dc1").andReturn(200, new DeploymentConfigBuilder()
       .withNewMetadata().withName("dc1").endMetadata()
       .build()).once();
@@ -108,7 +117,7 @@ public class DeploymentConfigTest {
   }
 
   @Test
-  public void testDelete() throws InterruptedException {
+  void testDelete() throws InterruptedException {
     DeploymentConfig dc1 = new DeploymentConfigBuilder()
       .withNewMetadata()
         .withName("dc1")
@@ -165,7 +174,7 @@ public class DeploymentConfigTest {
   }
 
   @Test
-  public void testDeleteWithPropagationPolicy() throws InterruptedException {
+  void testDeleteWithPropagationPolicy() throws InterruptedException {
     server.expect().delete()
       .withPath("/apis/apps.openshift.io/v1/namespaces/test/deploymentconfigs/dc1")
       .andReturn(200, new DeploymentConfigBuilder().build())
@@ -179,7 +188,7 @@ public class DeploymentConfigTest {
   }
 
   @Test
-	public void testDeployingLatest() {
+	void testDeployingLatest() {
 		server.expect().withPath("/apis/apps.openshift.io/v1/namespaces/test/deploymentconfigs/dc1")
 				.andReturn(200, new DeploymentConfigBuilder().withNewMetadata().withName("dc1").endMetadata()
 						.withNewStatus().withLatestVersion(1L).endStatus().build())
@@ -194,11 +203,11 @@ public class DeploymentConfigTest {
 
 		DeploymentConfig deploymentConfig = client.deploymentConfigs().withName("dc1").deployLatest();
 		assertNotNull(deploymentConfig);
-		assertEquals(new Long(2), deploymentConfig.getStatus().getLatestVersion());
+		assertEquals(Long.valueOf(2), deploymentConfig.getStatus().getLatestVersion());
 	}
 
   @Test
-  public void testDeployingLatestHandlesMissingLatestVersion() {
+  void testDeployingLatestHandlesMissingLatestVersion() {
     server.expect().withPath("/apis/apps.openshift.io/v1/namespaces/test/deploymentconfigs/dc1")
       .andReturn(200, new DeploymentConfigBuilder().withNewMetadata().withName("dc1").endMetadata()
         .withNewStatus().endStatus().build())
@@ -213,43 +222,15 @@ public class DeploymentConfigTest {
 
     DeploymentConfig deploymentConfig = client.deploymentConfigs().withName("dc1").deployLatest();
     assertNotNull(deploymentConfig);
-    assertEquals(new Long(1), deploymentConfig.getStatus().getLatestVersion());
+    assertEquals(Long.valueOf(1), deploymentConfig.getStatus().getLatestVersion());
   }
 
   //This is a test that verifies a recent fix (sundrio #135).
   //According to this issue when editing a list of buildables using predicates, the object visitors get overwrriten.
   @Test
-  public void testDeploymentConfigVisitor() {
+  void testDeploymentConfigVisitor() {
    AtomicBoolean visitedContainer = new AtomicBoolean();
-
-   DeploymentConfig dc1 = new DeploymentConfigBuilder()
-      .withNewMetadata()
-        .withName("dc1")
-      .endMetadata()
-      .withNewSpec()
-        .withReplicas(1)
-        .addToSelector("name", "dc1")
-        .addNewTrigger()
-        .withType("ImageChange")
-        .withNewImageChangeParams()
-        .withAutomatic(true)
-        .withContainerNames("container")
-        .withNewFrom()
-        .withKind("ImageStreamTag")
-        .withName("image:1.0")
-        .endFrom()
-        .endImageChangeParams()
-        .endTrigger()
-        .withNewTemplate()
-          .withNewSpec()
-            .addNewContainer()
-              .withName("container")
-              .withImage("image")
-            .endContainer()
-          .endSpec()
-        .endTemplate()
-      .endSpec()
-      .build();
+   DeploymentConfig dc1 = getDeploymentConfig().build();
 
    DeploymentConfig dc2 = new DeploymentConfigBuilder(dc1)
      .accept(new TypedVisitor<DeploymentConfigSpecFluent<?>>() {
@@ -268,6 +249,109 @@ public class DeploymentConfigTest {
 
        }
      }).build();
+   assertNotNull(dc2);
    assertTrue(visitedContainer.get());
+  }
+
+  @Test
+  void testGetLog() {
+    // Given
+    server.expect().get().withPath("/apis/apps.openshift.io/v1/namespaces/ns1/deploymentconfigs/dc1/log")
+      .andReturn(HttpURLConnection.HTTP_OK, "testlog")
+      .times(2);
+    OpenShiftClient client = server.getOpenshiftClient();
+
+    // When
+    String log = client.deploymentConfigs().inNamespace("ns1").withName("dc1").getLog();
+
+    // Then
+    assertNotNull(log);
+    assertEquals("testlog", log);
+  }
+
+  @Test
+  void testWatchLog() {
+    // Given
+    server.expect().get().withPath("/apis/apps.openshift.io/v1/namespaces/ns1/deploymentconfigs/dc1")
+      .andReturn(HttpURLConnection.HTTP_OK, getDeploymentConfig().build())
+      .times(2);
+    server.expect().get().withPath("/api/v1/namespaces/ns1/pods?labelSelector=" + Utils.toUrlEncoded("openshift.io/deployment-config.name=dc1"))
+      .andReturn(HttpURLConnection.HTTP_OK, new PodListBuilder()
+        .addToItems(new PodBuilder()
+          .withNewStatus()
+          .addNewCondition()
+          .withType("Ready")
+          .endCondition()
+          .endStatus()
+          .build())
+        .build())
+      .always();
+    server.expect().get().withPath("/apis/apps.openshift.io/v1/namespaces/ns1/deploymentconfigs/dc1/log?follow=true")
+      .andReturn(HttpURLConnection.HTTP_OK, "testlog")
+      .once();
+    OpenShiftClient client = server.getOpenshiftClient();
+    ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+
+    // When
+    LogWatch logWatch = client.deploymentConfigs().inNamespace("ns1").withName("dc1").watchLog(byteArrayOutputStream);
+
+    // Then
+    await().atMost(2, TimeUnit.SECONDS).until(() -> byteArrayOutputStream.toString().length() > 0);
+    assertNotNull(byteArrayOutputStream.toString());
+    assertEquals("testlog", byteArrayOutputStream.toString());
+    logWatch.close();
+  }
+
+  @Test
+  void testWaitUntilReady() throws InterruptedException {
+    // Given
+    DeploymentConfig deploymentConfig = getDeploymentConfig().withNewStatus()
+      .addNewCondition()
+      .withType("Available")
+      .endCondition()
+      .withReplicas(1).withAvailableReplicas(1)
+      .endStatus().build();
+    server.expect().get().withPath("/apis/apps.openshift.io/v1/namespaces/ns1/deploymentconfigs/dc1")
+      .andReturn(HttpURLConnection.HTTP_OK, deploymentConfig)
+      .always();
+    OpenShiftClient client = server.getOpenshiftClient();
+
+    // When
+    deploymentConfig = client.deploymentConfigs().inNamespace("ns1").withName("dc1").waitUntilReady(10, TimeUnit.SECONDS);
+
+    // Then
+    assertNotNull(deploymentConfig);
+    assertEquals(1, deploymentConfig.getStatus().getAvailableReplicas().intValue());
+    assertTrue(deploymentConfig.getStatus().getConditions().stream().anyMatch(c -> c.getType().equals("Available")));
+  }
+
+  private DeploymentConfigBuilder getDeploymentConfig() {
+    return new DeploymentConfigBuilder()
+      .withNewMetadata()
+      .withName("dc1")
+      .endMetadata()
+      .withNewSpec()
+      .withReplicas(1)
+      .addToSelector("name", "dc1")
+      .addNewTrigger()
+      .withType("ImageChange")
+      .withNewImageChangeParams()
+      .withAutomatic(true)
+      .withContainerNames("container")
+      .withNewFrom()
+      .withKind("ImageStreamTag")
+      .withName("image:1.0")
+      .endFrom()
+      .endImageChangeParams()
+      .endTrigger()
+      .withNewTemplate()
+      .withNewSpec()
+      .addNewContainer()
+      .withName("container")
+      .withImage("image")
+      .endContainer()
+      .endSpec()
+      .endTemplate()
+      .endSpec();
   }
 }
